Actualizar menu.html

--- a/menu.html
+++ b/menu.html
@@ -152,18 +152,20 @@
         <p class="text-muted text-sm opacity-60">Tu historial está al día</p>
       </div>
 
-      <a href="credencial.html" class="credencial-wallet">
+            <a href="credencial.html" class="credencial-wallet">
         <div class="flex justify-between items-end">
           <div>
             <p class="text-[10px] uppercase tracking-widest opacity-60 mb-1">CREDENCIAL DIGITAL</p>
             <h3 class="text-xl font-bold">Franco Paganini</h3>
             <p class="text-xs opacity-80">CURAID-01-41316202</p>
+            <p class="text-[11px] font-medium mt-1 text-white opacity-90">Toca para ver el token de seguridad</p>
           </div>
           <div class="bg-white p-1 rounded-lg">
             <img src="qr_menu.png" alt="QR" class="w-12 h-12">
           </div>
         </div>
       </a>
+
 
       <div class="menu-grid">
         <a href="prescripciones.html" class="menu-item">
