--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,7 @@
       gap: 16px;
     }
 
-    .menu-item {
+        .menu-item {
       background: var(--glass);
       border: 1px solid var(--glass-border);
       backdrop-filter: blur(12px);
@@ -84,10 +84,12 @@
       padding: 24px 16px;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center; /* Cambiado de flex-start a center */
+      text-align: center;    /* Asegura que el texto de varias líneas se centre */
       text-decoration: none;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
+
 
     .menu-item:active { background: rgba(255,255,255,0.1); transform: scale(0.95); }
 
