--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,12 @@
     }
 
 
-    .menu-item:active { background: rgba(255,255,255,0.1); transform: scale(0.95); }
+        .menu-item:active { 
+      transform: scale(0.96) translateY(2px);
+      background: rgba(255, 255, 255, 0.08);
+      box-shadow: inset 0 4px 12px rgba(0,0,0,0.2);
+      border-color: rgba(255, 255, 255, 0.2);
+    }
 
     .icon-box {
       width: 48px; height: 48px;
