Actualizar menu.html

--- a/menu.html
+++ b/menu.html
@@ -175,7 +175,7 @@
     <main>
       <div class="mb-6">
         <h1 class="text-3xl font-extrabold">Hola, Franco</h1>
-        <p class="text-muted text-sm opacity-60">Tu historial está al día</p>
+        <p class="text-muted text-sm opacity-60">¿Qué gestión necesitás hacer hoy?</p>
       </div>
 
       <a href="credencial.html" class="credencial-wallet" onclick="navegar(event, this.href)">
