--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,8 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 
+
+
 <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.6/libs/oversea/index.js"></script>
 <script>
   new CozeWebSDK.WebChatClient({
@@ -1079,51 +1081,19 @@ document.addEventListener('DOMContentLoaded', function () {
       bot_id: '7596429833782214709',
     },
     componentProps: {
-      title: 'Asistente Ley C.U.R.A.',
+      title: 'Coze',
     },
     auth: {
       type: 'token',
-      token: 'pat_3OSZcoIfdxswvvLvvblKotMXfX4gIi6UkTaD9QbDaZaZJ8LppoWBGznpAepqBeJB', // Pegá tu pat_... acá
+      token: 'pat_3OSZcoIfdxswvvLvvblKotMXfX4gIi6UkTaD9QbDaZaZJ8LppoWBGznpAepqBeJB',
       onRefreshToken: function () {
-        return 'pat_3OSZcoIfdxswvvLvvblKotMXfX4gIi6UkTaD9QbDaZaZJ8LppoWBGznpAepqBeJB'; // Pegá tu pat_... acá también
+        return 'pat_3OSZcoIfdxswvvLvvblKotMXfX4gIi6UkTaD9QbDaZaZJ8LppoWBGznpAepqBeJB'
       }
-    },
-    ui: {
-      base: {
-        icon: 'https://i.ibb.co/6R0D9Yx/logo-cura.png',
-        layout: 'mobile',
-      },
-      chatBox: {
-        isUserChatInfoShow: false, // Quita el "User 1234"
-      },
-      footer: {
-        isShow: false, // Quita el "Powered by"
-      },
-      chatBotButton: {
-        style: {
-          bottom: '20px',
-          right: '20px',
-          backgroundColor: '#004E85', // Tu azul de la web
-        },
-      },
-    },
+    }
   });
 </script>
 
-<style>
-  /* Para evitar que se pise con otros elementos de tu página */
-  .coze-web-chat-client-container {
-    z-index: 1000000 !important;
-  }
-</style>
-
-<style>
-  /* Para asegurar que nada tape el chat en tu web */
-  .coze-web-chat-client-container {
-    z-index: 1000000 !important;
-  }
-</style>
-
+  
 <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
 <script>
   const lenis = new Lenis({
