--- a/index.html
+++ b/index.html
@@ -1073,24 +1073,60 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 
 
-<script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.6/libs/oversea/index.js"></script>
+<script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script>
+
 <script>
   new CozeWebSDK.WebChatClient({
     config: {
+      type: 'bot',
       bot_id: '7596429833782214709',
-    },
-    componentProps: {
-      title: 'Coze',
+      isIframe: false,
     },
     auth: {
       type: 'token',
-      token: 'pat_3OSZcoIfdxswvvLvvblKotMXfX4gIi6UkTaD9QbDaZaZJ8LppoWBGznpAepqBeJB',
-      onRefreshToken: function () {
-        return 'pat_3OSZcoIfdxswvvLvvblKotMXfX4gIi6UkTaD9QbDaZaZJ8LppoWBGznpAepqBeJB'
+      token: 'cztei_093F6MWFMbPyMR1Nmj83kJwYjScB4km0r5AEC0tJnZHlrb0frEB5s6wR5GezJfVZG',
+      onRefreshToken: async () => 'cztei_093F6MWFMbPyMR1Nmj83kJwYjScB4km0r5AEC0tJnZHlrb0frEB5s6wR5GezJfVZG'
+    },
+    userInfo: {
+      id: 'user',
+      nickname: 'Usuario',
+    },
+    ui: {
+      base: {
+        icon: 'https://i.ibb.co/6R0D9Yx/logo-cura.png',
+        layout: 'mobile',
+        lang: 'es',
+        zIndex: 1000000
+      },
+      header: {
+        isShow: true,
+        isNeedClose: true,
+      },
+      footer: {
+        isShow: false, // ESTO QUITA LA MARCA DE AGUA
+      },
+      chatBot: {
+        title: 'Asistente Ley C.U.R.A.',
+        uploadable: false,
+        width: 390,
+      },
+      asstBtn: {
+        isNeed: true
       }
-    }
+    },
   });
 </script>
+
+<style>
+  /* Forzamos el color azul institucional en el botón circular */
+  .coze-asst-btn {
+    background-color: #004E85 !important;
+  }
+  /* Ocultamos cualquier texto de "Powered by" residual */
+  div[class*="style_footer"], div[class*="style_poweredBy"] {
+    display: none !important;
+  }
+</style>
 
 
   
